--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -157,31 +157,29 @@ CurrentPosGridSize=0
 GridEnabled=False
 
 [MRU]
-<<<<<<< Updated upstream
 MRUItem0=/Game/firstfloor
-MRUItem1=/Game/stairwellblock3
-MRUItem2=/Game/stairwellblock2
-MRUItem3=/Game/Living_Room
-MRUItem4=/Game/abandonedroom_V2
-MRUItem5=/Game/Attic
-MRUItem6=/Game/Assets/Amy/firstfloor
-MRUItem7=/Game/abandonedroom_Migration
-=======
 MRUItem0=/Game/Attic
 MRUItem0=/Game/stairwellblock3
 MRUItem1=/Game/stairwellblock3
+MRUItem1=/Game/stairwellblock3
 MRUItem1=/Game/stairwellblock2
+MRUItem2=/Game/stairwellblock2
 MRUItem2=/Game/Living_Room
 MRUItem2=/Game/Living_Room
+MRUItem3=/Game/Living_Room
 MRUItem3=/Game/abandonedroom_V2
 MRUItem3=/Game/abandonedroom_V2
+MRUItem4=/Game/abandonedroom_V2
 MRUItem4=/Game/Assets/Amy/firstfloor
 MRUItem4=/Game/Attic
+MRUItem5=/Game/Attic
 MRUItem5=/Game/abandonedroom_Migration
 MRUItem5=/Game/Assets/Amy/firstfloor
-None=======
+MRUItem6=/Game/Assets/Amy/firstfloor
 MRUItem6=/Game/abandonedroom_Migration
->>>>>>> Stashed changes
+MRUItem7=/Game/abandonedroom_Migration
+None=======
+None=======
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -213,10 +211,11 @@ None=======
 None=======
 None=======
 None=======
-<<<<<<< Updated upstream
-=======
 None=======
->>>>>>> Stashed changes
+None=======
+None=======
+None=======
+None=======
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
@@ -231,23 +230,11 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Cabinet
 ContentBrowserDrawer.SelectedPaths=/Game
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-=======
->>>>>>> Stashed changes
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Tashan/Wood
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets/Damaged_Picture_Frame_ukpidjpaw
-<<<<<<< Updated upstream
->>>>>>> Stashed changes
-=======
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets
 ContentBrowserDrawer.SelectedPaths=/
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -283,11 +270,9 @@ LastLevel=/Game/Attic
 LastLevel=/Game/abandonedroom_V2
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 LastLevel=/Game/Living_Room
-<<<<<<< Updated upstream
 LastLevel=/Game/firstfloor
-=======
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
->>>>>>> Stashed changes
+None=======
 None=======
 None=======
 None=======
@@ -1436,20 +1421,12 @@ EditorStyleSettings=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-OpenAssetsAtExit=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper.mat_wallpaper
-OpenAssetsAtExit=/Game/Group_Assets/Tashan/Wood/MM_wood.MM_wood
-=======
 CleanShutdown=True
->>>>>>> Stashed changes
-=======
-OpenAssetsAtExit=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper.wallpaper
->>>>>>> Stashed changes
-=======
-CleanShutdown=True
+CleanShutdown=False
 None=======
->>>>>>> Stashed changes
+None=======
+None=======
+None=======
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1465,78 +1442,70 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-=======
->>>>>>> Stashed changes
+None=======
+None=======
+None=======
+None=======
 MRUItem0=/Game/Group_Assets/Tashan/Wood/MM_wood
 MRUItem0=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper
+MRUItem0=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper
 MRUItem1=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper
 MRUItem1=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_char
+MRUItem1=/Game/Assets/Amy/Asset/bed/lambert1
 MRUItem2=/Game/Group_Assets/Tashan/table/mat_cloth
 MRUItem2=/Game/Group_Materials/Brick/Brick
+MRUItem2=/Game/firstfloor
 MRUItem3=/Game/Group_Assets/Tashan/table/mat_cloth_Inst
 MRUItem3=/Game/Group_Materials/Paintings/MM_Pictures_Inst2
+MRUItem3=/Game/Group_Assets/Tashan/Wood/MM_wood
 MRUItem4=/Game/Group_Materials/Glass/Glass
 MRUItem4=/Game/Megascans/3D_Assets/Damaged_Picture_Frame_ukpidjpaw/MI_Damaged_Picture_Frame_ukpidjpaw_2K_Inst
+MRUItem4=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper
 MRUItem5=/Game/Group_Materials/Glass/Glass_Inst
 MRUItem5=/Game/Group_Materials/Paintings/MM_Pictures
+MRUItem5=/Game/Group_Assets/Tashan/table/mat_cloth
 MRUItem6=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
 MRUItem6=/Game/Group_Materials/Paintings/M_Paintings
+MRUItem6=/Game/Group_Assets/Tashan/table/mat_cloth_Inst
 MRUItem7=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
 MRUItem7=/Game/Assets/Tashan/floor/mat_floors
+MRUItem7=/Game/Group_Materials/Glass/Glass
 MRUItem8=/Game/Assets/Tashan/floor/mat_floors
 MRUItem8=/Game/Assets/Tashan/floor/mat_floors_Inst
+MRUItem8=/Game/Group_Materials/Glass/Glass_Inst
 MRUItem9=/Game/Assets/Tashan/floor/mat_floors_Inst
 MRUItem9=/Game/Megascans/Decals/Old_Wooden_Chips_sljkzqd/MI_Old_Wooden_Chips_sljkzqd_4K_Inst
+MRUItem9=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
 MRUItem10=/Game/Megascans/Decals/Old_Wooden_Chips_sljkzqd/MI_Old_Wooden_Chips_sljkzqd_4K_Inst
 MRUItem10=/Game/Megascans/Decals/Old_Wooden_Chips_sljkzqd/T_Old_Wooden_Chips_sljkzqd_4K_D
+MRUItem10=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
 MRUItem11=/Game/Megascans/Decals/Old_Wooden_Chips_sljkzqd/T_Old_Wooden_Chips_sljkzqd_4K_D
 MRUItem11=/Game/Megascans/Decals/Old_Wooden_Chips_sljkzqd/MI_Old_Wooden_Chips_sljkzqd_4K
+MRUItem11=/Game/Assets/Tashan/floor/mat_floors
 MRUItem12=/Game/Megascans/Decals/Old_Wooden_Chips_sljkzqd/MI_Old_Wooden_Chips_sljkzqd_4K
 MRUItem12=/Game/Group_Assets/Tashan/Wood/MM_wood_Inst
+MRUItem12=/Game/Assets/Tashan/floor/mat_floors_Inst
 MRUItem13=/Game/Group_Assets/Tashan/Wood/MM_wood_Inst
 MRUItem13=/Game/Group_Assets/Tashan/Wood/MM_wood
+MRUItem13=/Game/Megascans/Decals/Old_Wooden_Chips_sljkzqd/MI_Old_Wooden_Chips_sljkzqd_4K_Inst
 MRUItem14=/Game/Megascans/3D_Plants/Kikuyu_Grass_wiljearqx/MI_Kikuyu_Grass_wiljearqx_4K
 MRUItem14=/Game/Group_Assets/Tashan/table/mat_cloth
+MRUItem14=/Game/Megascans/Decals/Old_Wooden_Chips_sljkzqd/T_Old_Wooden_Chips_sljkzqd_4K_D
 MRUItem15=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_frame
 MRUItem15=/Game/Group_Assets/Tashan/table/mat_cloth_Inst
+MRUItem15=/Game/Megascans/Decals/Old_Wooden_Chips_sljkzqd/MI_Old_Wooden_Chips_sljkzqd_4K
 MRUItem16=/Game/Living_Room
 MRUItem16=/Game/Megascans/3D_Plants/Kikuyu_Grass_wiljearqx/MI_Kikuyu_Grass_wiljearqx_4K
+MRUItem16=/Game/Group_Assets/Tashan/Wood/MM_wood_Inst
 MRUItem17=/Game/Group_Assets/Aziz/Assets/MM_RimThingies
 MRUItem17=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_frame
+MRUItem17=/Game/Megascans/3D_Plants/Kikuyu_Grass_wiljearqx/MI_Kikuyu_Grass_wiljearqx_4K
 MRUItem18=/Game/Assets/Tashan/stairs/Material_005
 MRUItem18=/Game/Living_Room
+MRUItem18=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_frame
 MRUItem19=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/NewMaterial
 MRUItem19=/Game/Group_Assets/Aziz/Assets/MM_RimThingies
-<<<<<<< Updated upstream
->>>>>>> Stashed changes
-=======
-MRUItem0=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper
-MRUItem1=/Game/Assets/Amy/Asset/bed/lambert1
-MRUItem2=/Game/firstfloor
-MRUItem3=/Game/Group_Assets/Tashan/Wood/MM_wood
-MRUItem4=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper
-MRUItem5=/Game/Group_Assets/Tashan/table/mat_cloth
-MRUItem6=/Game/Group_Assets/Tashan/table/mat_cloth_Inst
-MRUItem7=/Game/Group_Materials/Glass/Glass
-MRUItem8=/Game/Group_Materials/Glass/Glass_Inst
-MRUItem9=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
-MRUItem10=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
-MRUItem11=/Game/Assets/Tashan/floor/mat_floors
-MRUItem12=/Game/Assets/Tashan/floor/mat_floors_Inst
-MRUItem13=/Game/Megascans/Decals/Old_Wooden_Chips_sljkzqd/MI_Old_Wooden_Chips_sljkzqd_4K_Inst
-MRUItem14=/Game/Megascans/Decals/Old_Wooden_Chips_sljkzqd/T_Old_Wooden_Chips_sljkzqd_4K_D
-MRUItem15=/Game/Megascans/Decals/Old_Wooden_Chips_sljkzqd/MI_Old_Wooden_Chips_sljkzqd_4K
-MRUItem16=/Game/Group_Assets/Tashan/Wood/MM_wood_Inst
-MRUItem17=/Game/Megascans/3D_Plants/Kikuyu_Grass_wiljearqx/MI_Kikuyu_Grass_wiljearqx_4K
-MRUItem18=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_frame
 MRUItem19=/Game/Living_Room
->>>>>>> Stashed changes
-=======
-None=======
->>>>>>> Stashed changes
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -1550,11 +1519,6 @@ DirectionalLight.Light=True
 PostProcessVolume.Global Illumination=True
 
 [PlacementMode]
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-=======
-=======
 None=======
 None=======
 None=======
@@ -1563,7 +1527,19 @@ None=======
 None=======
 None=======
 None=======
->>>>>>> Stashed changes
+None=======
+None=======
+None=======
+None=======
+None=======
+None=======
+None=======
+None=======
+None=======
+None=======
+None=======
+None=======
+None=======
 RecentlyPlaced=/Game/Megascans/3D_Assets/Damaged_Picture_Frame_ukpidjpaw/MI_Damaged_Picture_Frame_ukpidjpaw_2K.MI_Damaged_Picture_Frame_ukpidjpaw_2K;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Damaged_Picture_Frame_ukpidjpaw/MI_Damaged_Picture_Frame_ukpidjpaw_2K_Inst.MI_Damaged_Picture_Frame_ukpidjpaw_2K_Inst;
 RecentlyPlaced=/Game/Group_Materials/Paintings/MM_Pictures_Inst2.MM_Pictures_Inst2;
@@ -1572,9 +1548,6 @@ RecentlyPlaced=/Game/Megascans/3D_Assets/Damaged_Picture_Frame_ukpidjpaw/S_Damag
 RecentlyPlaced=/Game/Megascans/Decals/Old_Wooden_Chips_sljkzqd/MI_Old_Wooden_Chips_sljkzqd_4K.MI_Old_Wooden_Chips_sljkzqd_4K;
 RecentlyPlaced=/Game/Megascans/Decals/Wooden_Scrap_slxnxvd/MI_Wooden_Scrap_slxnxvd_4K.MI_Wooden_Scrap_slxnxvd_4K;
 RecentlyPlaced=/Game/Megascans/Decals/Burnt_Paper_udgffa1ka/MI_Burnt_Paper_udgffa1ka_2K.MI_Burnt_Paper_udgffa1ka_2K;
-<<<<<<< Updated upstream
->>>>>>> Stashed changes
-=======
 RecentlyPlaced=/Game/Megascans/Surfaces/Damaged_Wall_Plaster_vcvoeac/MI_Damaged_Wall_Plaster_vcvoeac_2K.MI_Damaged_Wall_Plaster_vcvoeac_2K;
 RecentlyPlaced=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_Inst1.mat_wallpaper_Inst1;
 RecentlyPlaced=/Game/Megascans/Surfaces/Cracked_Wall_Plaster_ulgkfg3lw/MI_Cracked_Wall_Plaster_ulgkfg3lw_2K.MI_Cracked_Wall_Plaster_ulgkfg3lw_2K;
@@ -1585,9 +1558,6 @@ RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Win
 RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Window_01_low.G_ModularAssets_Door_Window_01_SM_Window_01_low;
 RecentlyPlaced=/Game/Group_Assets/Modular/MainStructureModularAssets/Window_Triangle_Walls_Wall_Smooth_Window_1m.Window_Triangle_Walls_Wall_Smooth_Window_1m;
 RecentlyPlaced=/Game/Assets/Amy/Asset/bed/bed_low.bed_low;
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
 RecentlyPlaced=/Game/Group_Assets/Tashan/Wood/MM_wood_Inst.MM_wood_Inst;
 RecentlyPlaced=/Game/Megascans/Decals/Wooden_Scrap_slxnxvd/MI_Wooden_Scrap_slxnxvd_4K.MI_Wooden_Scrap_slxnxvd_4K;
 RecentlyPlaced=/Game/Megascans/Decals/Old_Wooden_Chips_sljkzqd/MI_Old_Wooden_Chips_sljkzqd_4K.MI_Old_Wooden_Chips_sljkzqd_4K;
@@ -1598,24 +1568,11 @@ RecentlyPlaced=/Game/Megascans/3D_Assets/Red_Book_vebrbcmqx/S_Red_Book_vebrbcmqx
 RecentlyPlaced=/Game/Megascans/3D_Assets/Pink_Book_vdkvcaz/S_Pink_Book_vdkvcaz_lod3_Var1.S_Pink_Book_vdkvcaz_lod3_Var1;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Red_And_Blue_Fat_Book_vdkvbiu/S_Red_And_Blue_Fat_Book_vdkvbiu_lod3_Var1.S_Red_And_Blue_Fat_Book_vdkvbiu_lod3_Var1;
 RecentlyPlaced=/Game/Group_Assets/Tashan/table/mat_cloth_Inst.mat_cloth_Inst;
-<<<<<<< Updated upstream
 RecentlyPlaced=/Game/Group_Assets/Tashan/table/mat_cloth.mat_cloth;
 RecentlyPlaced=/Game/Group_Assets/Tashan/table/tableclothmesh.tableclothmesh;
 RecentlyPlaced=/Game/Megascans/Decals/Wood_Carving_vilpbeqfw/MI_Wood_Carving_vilpbeqfw_4K.MI_Wood_Carving_vilpbeqfw_4K;
 RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-<<<<<<< Updated upstream
-=======
->>>>>>> Stashed changes
-None=======
-None=======
-None=======
-None=======
-None=======
-None=======
-None=======
-=======
->>>>>>> Stashed changes
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
