--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1422,7 +1422,7 @@ EditorStyleSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=False
+CleanShutdown=True
 None=======
 None=======
 None=======
@@ -1818,7 +1818,7 @@ ScreenPosition=X=88.000 Y=0.000
 WindowSize=X=1289.600 Y=729.600
 WindowSize=X=1286.400 Y=726.400
 WindowSize=X=1285.333 Y=725.333
-WindowSize=X=1313.333 Y=753.333
+WindowSize=X=1315.333 Y=755.333
 None=======
 None=======
 None=======
