--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -176,8 +176,8 @@ StaticMeshActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCub
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.01- Input Textures,MaterialEditorInstanceConstant.ParameterGroups.01 - Input Textures,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.02- UV Controls,MaterialEditorInstanceConstant.ParameterGroups.03- Roughness,MaterialEditorInstanceConstant.ParameterGroups.03 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.04 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.05 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.06 - Translucency,MaterialEditorInstanceConstant.ParameterGroups.06 - Opacity,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Wind,MaterialEditorInstanceConstant.ParameterGroups.07 - Normal,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.08 - Parallax,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup
 MaterialInstanceConstant=
 CineCameraActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
-PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Reflections.Reflections
-BrushComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Reflections.Reflections
+PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
+BrushComponent=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 wardrobe_C=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
 StaticMeshComponent=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
 sm_Mannequin_C=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,CineCameraActor.PostProcess.Lens
@@ -185,8 +185,8 @@ Actor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCap
 DecalActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
 DirectionalLight=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens,DirectionalLight.TransformCommon.Transform
 SphereReflectionCapture=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections
-SkyAtmosphere=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Reflections.Reflections
-SkyLight=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Reflections.Reflections
+SkyAtmosphere=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
+SkyLight=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -223,7 +223,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Tashan/Wood
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets/Damaged_Picture_Frame_ukpidjpaw
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets
 ContentBrowserDrawer.SelectedPaths=/
-ContentBrowserDrawer.SelectedPaths=/Game/Megascans/Surfaces/Cracked_Wall_Plaster_ulgkfg3lw
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1096,6 +1096,7 @@ MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
 MaterialExpressionTextureCoordinate.MaterialExpression=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Actor.Rendering=True
 Actor.Replication=True
 Actor.Collision=True
@@ -1431,7 +1432,6 @@ VolumetricCloud.Cooking=True
 VolumetricCloud.Replication=True
 VolumetricCloud.Networking=True
 VolumetricCloud.Actor=True
-Texture2D.Interchange =True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1446,9 +1446,6 @@ None=======
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse.rockinghorse
-OpenAssetsAtExit=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse_UV2.rockinghorse_UV2
-OpenAssetsAtExit=/Game/Assets/Amy/Asset/music_Stand/music_stand.music_stand
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1464,13 +1461,13 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Amy/Asset/music_Stand/music_stand
-MRUItem1=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse
-MRUItem2=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse_UV2
-MRUItem3=/Game/Assets/Amy/Asset/bed/bed_low_lambert1_OcclusionRoughnessMetallic
-MRUItem4=/Game/Assets/Amy/Asset/bed/lambert1
-MRUItem5=/Game/Megascans/Surfaces/Cracked_Wall_Plaster_ulgkfg3lw/MI_Cracked_Wall_Plaster_ulgkfg3lw_2K
-MRUItem6=/Game/firstfloor
+MRUItem0=/Game/firstfloor
+MRUItem1=/Game/Assets/Amy/Asset/music_Stand/music_stand
+MRUItem2=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse
+MRUItem3=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse_UV2
+MRUItem4=/Game/Assets/Amy/Asset/bed/bed_low_lambert1_OcclusionRoughnessMetallic
+MRUItem5=/Game/Assets/Amy/Asset/bed/lambert1
+MRUItem6=/Game/Megascans/Surfaces/Cracked_Wall_Plaster_ulgkfg3lw/MI_Cracked_Wall_Plaster_ulgkfg3lw_2K
 MRUItem7=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper
 MRUItem8=/Game/Group_Assets/Tashan/Wood/MM_wood
 MRUItem9=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper
@@ -1794,7 +1791,7 @@ WindowSize=X=1289.600 Y=729.600
 WindowSize=X=1286.400 Y=726.400
 WindowSize=X=1285.333 Y=725.333
 WindowSize=X=1315.333 Y=755.333
-WindowSize=X=1315.333 Y=755.333
+WindowSize=X=1317.333 Y=757.333
 None=======
 None=======
 None=======
