--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -155,21 +155,14 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,VisualizeGPUSkinCache=0,ShaderPrint=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,VisualizeGPUSkinCache=0,ShaderPrint=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",StrataVisualizationMode="",GroomVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",GPUSkinCacheVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 CurrentPosGridSize=0
 GridEnabled=False
+RotGridEnabled=False
 
 [MRU]
-<<<<<<< Updated upstream
-MRUItem0=/Game/abandonedroom_V2
-MRUItem1=/Game/firstfloor
-MRUItem2=/Game/stairwellblock3
-MRUItem3=/Game/stairwellblock2
-MRUItem4=/Game/Living_Room
-=======
 MRUItem0=/Game/Living_Room
 MRUItem1=/Game/abandonedroom_V2
 MRUItem2=/Game/stairwellblock3
 MRUItem3=/Game/firstfloor
 MRUItem4=/Game/stairwellblock2
->>>>>>> Stashed changes
 MRUItem5=/Game/Attic
 MRUItem6=/Game/Assets/Amy/firstfloor
 MRUItem7=/Game/abandonedroom_Migration
@@ -338,7 +331,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Tashan/Wood
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets/Damaged_Picture_Frame_ukpidjpaw
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets
 ContentBrowserDrawer.SelectedPaths=/
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Materials/Paintings
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Cloth
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -410,7 +403,7 @@ None=======
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -539,12 +532,12 @@ MaterialExpressionMultiply="\"Object\" "
 FbxImportUI="\"Object\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
-StreamableRenderAsset="\"Object\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
-StaticMesh="\"Object\" "
+StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 AssetViewerSettings="\"Object\" "
 MaterialExpressionConstant3Vector="\"Object\" "
 Actor="\"Object\" "
@@ -1775,14 +1768,12 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/Group_Assets/Aziz/Assets/FlowerLamp/MI_FlowerLamp.MI_FlowerLamp
-OpenAssetsAtExit=/Game/Group_Assets/Aziz/Assets/Fireplace/MM_FireplaceTexture1.MM_FireplaceTexture1
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1798,49 +1789,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-<<<<<<< Updated upstream
-MRUItem0=/Game/Group_Assets/Aziz/Assets/Fireplace/MM_FireplaceTexture1
-MRUItem1=/Game/Group_Assets/Aziz/Assets/FlowerLamp/MI_FlowerLamp
-MRUItem2=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/leaf
-MRUItem3=/Game/Assets/Tashan/M4/Tashan/Assets/blockout/wardrobe
-MRUItem4=/Game/Group_Assets/Tashan/hangers/sm_hanger
-MRUItem5=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_Inst1
-MRUItem6=/Game/Group_Materials/Paintings/MM_Pictures_Inst3
-MRUItem7=/Game/Group_Assets/Tashan/hangers/hanger_Cylinder_016
-MRUItem8=/Game/Group_Assets/Tashan/hangers/hanger_Cylinder_015
-MRUItem9=/Game/Group_Assets/Tashan/hangers/hanger_Cube
-MRUItem10=/Game/Group_Assets/Charlotte/Assets/Mirror/Mirror_Gold_Inst
-MRUItem11=/Game/Group_Assets/Charlotte/Assets/Mirror/Mirror_Gold
-MRUItem12=/Game/Group_Assets/Tashan/Wood/MM_wood_Inst_Inst
-MRUItem13=/Game/Group_Assets/Tashan/ceilingfan/ceilingfan_Skeleton
-MRUItem14=/Game/Group_Assets/Tashan/ceilingfan/ceilingfan
-MRUItem15=/Game/Group_Assets/Tashan/ceilingfan/ceilingfan_Anim_Cube_003_Action
-MRUItem16=/Game/Group_Assets/Tashan/ceilingfan/ceilingfan_Anim_Cube_003_Cube_001Action_001
-MRUItem17=/Game/Megascans/Decals/Concrete_Leakage_tk3jefoc/MI_Concrete_Crack_sfelnxg_4K_Inst_Inst
-MRUItem18=/Game/Megascans/Surfaces/Multi-colored_Lines_Fabric_scklezp0/MI_Multi-colored_Lines_Fabric_scklezp0_4K_Inst3
-MRUItem19=/Game/Megascans/Surfaces/Grey_Fabric_sbkjpwp0/MI_Grey_Fabric_sbkjpwp0_4K
-=======
-MRUItem0=/Game/Living_Room
-MRUItem1=/Game/Megascans/Surfaces/Multi-colored_Lines_Fabric_scklezp0/MI_Multi-colored_Lines_Fabric_scklezp0_4K_Inst3
-MRUItem2=/Game/Megascans/Surfaces/Grey_Fabric_sbkjpwp0/MI_Grey_Fabric_sbkjpwp0_4K
-MRUItem3=/Game/Megascans/Surfaces/Multi-colored_Lines_Fabric_scklezp0/MI_Multi-colored_Lines_Fabric_scklezp0_4K
-MRUItem4=/Game/Megascans/Surfaces/Multi-colored_Lines_Fabric_scklezp0/MI_Multi-colored_Lines_Fabric_scklezp0_4K_Inst2
-MRUItem5=/Game/Megascans/Surfaces/Multi-colored_Lines_Fabric_scklezp0/MI_Multi-colored_Lines_Fabric_scklezp0_4K_Inst1
-MRUItem6=/Game/Megascans/Surfaces/Multi-colored_Lines_Fabric_scklezp0/MI_Multi-colored_Lines_Fabric_scklezp0_4K_Inst
-MRUItem7=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
-MRUItem8=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
-MRUItem9=/Game/MSPresets/M_MS_Decal_Material_VT/M_MS_Decal_Material_VT
-MRUItem10=/Game/Megascans/Decals/Antique_Rug_thslcjzs/MI_Antique_Rug_thslcjzs_2K
-MRUItem11=/Game/Megascans/Decals/Antique_Rug_thslcjzs/MI_Antique_Rug_thslcjzs_2K_Inst
-MRUItem12=/Game/firstfloor
-MRUItem13=/Game/Assets/Amy/Asset/music_Stand/music_stand
-MRUItem14=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse
-MRUItem15=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse_UV2
-MRUItem16=/Game/Assets/Amy/Asset/bed/bed_low_lambert1_OcclusionRoughnessMetallic
-MRUItem17=/Game/Assets/Amy/Asset/bed/lambert1
-MRUItem18=/Game/Megascans/Surfaces/Cracked_Wall_Plaster_ulgkfg3lw/MI_Cracked_Wall_Plaster_ulgkfg3lw_2K
-MRUItem19=/Game/Assets/Amy/Textures/3Dprop_download_texture/wallpaper_light_2/wallpaper
->>>>>>> Stashed changes
+MRUItem0=/Game/Group_Assets/Aziz/Assets/Cloth/SM_ClothSmallCouch
+MRUItem1=/Game/Group_Assets/Aziz/Assets/Cloth/SM_ClothLargeCouch
+MRUItem2=/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet
+MRUItem3=/Game/Living_Room
+MRUItem4=/Game/Megascans/Surfaces/Multi-colored_Lines_Fabric_scklezp0/MI_Multi-colored_Lines_Fabric_scklezp0_4K_Inst3
+MRUItem5=/Game/Megascans/Surfaces/Grey_Fabric_sbkjpwp0/MI_Grey_Fabric_sbkjpwp0_4K
+MRUItem6=/Game/Megascans/Surfaces/Multi-colored_Lines_Fabric_scklezp0/MI_Multi-colored_Lines_Fabric_scklezp0_4K
+MRUItem7=/Game/Megascans/Surfaces/Multi-colored_Lines_Fabric_scklezp0/MI_Multi-colored_Lines_Fabric_scklezp0_4K_Inst2
+MRUItem8=/Game/Megascans/Surfaces/Multi-colored_Lines_Fabric_scklezp0/MI_Multi-colored_Lines_Fabric_scklezp0_4K_Inst1
+MRUItem9=/Game/Megascans/Surfaces/Multi-colored_Lines_Fabric_scklezp0/MI_Multi-colored_Lines_Fabric_scklezp0_4K_Inst
+MRUItem10=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mat_stainedglass
+MRUItem11=/Game/Assets/Tashan/M4/Tashan/Assets/windows/mi_stainedglass
+MRUItem12=/Game/MSPresets/M_MS_Decal_Material_VT/M_MS_Decal_Material_VT
+MRUItem13=/Game/Megascans/Decals/Antique_Rug_thslcjzs/MI_Antique_Rug_thslcjzs_2K
+MRUItem14=/Game/Megascans/Decals/Antique_Rug_thslcjzs/MI_Antique_Rug_thslcjzs_2K_Inst
+MRUItem15=/Game/firstfloor
+MRUItem16=/Game/Assets/Amy/Asset/music_Stand/music_stand
+MRUItem17=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse
+MRUItem18=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse_UV2
+MRUItem19=/Game/Assets/Amy/Asset/bed/bed_low_lambert1_OcclusionRoughnessMetallic
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -1881,7 +1849,7 @@ None=======
 None=======
 None=======
 None=======
-<<<<<<< Updated upstream
+None=======
 RecentlyPlaced=/Game/Megascans/Surfaces/Cracked_Wall_Plaster_ulgkfg3lw/MI_Cracked_Wall_Plaster_ulgkfg3lw_2K.MI_Cracked_Wall_Plaster_ulgkfg3lw_2K;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Modular_Saloon_Balcony_Trim_ufbpaeadw/S_Modular_Saloon_Balcony_Trim_ufbpaeadw_lod0_Var1.S_Modular_Saloon_Balcony_Trim_ufbpaeadw_lod0_Var1;
 RecentlyPlaced=/Game/Assets/Tashan/stairs/Stairsidestraight.Stairsidestraight;
@@ -1902,7 +1870,6 @@ RecentlyPlaced=/Game/Group_Materials/Mirror_Glass/Mirror_Glass_Inst_Inst.Mirror_
 RecentlyPlaced=/Game/MSPresets/M_MS_Glass_Material/M_MS_Glass_Material.M_MS_Glass_Material;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Megascans/Decals/Wooden_Scrap_slxnxvd/MI_Wooden_Scrap_slxnxvd_4K.MI_Wooden_Scrap_slxnxvd_4K;
-=======
 RecentlyPlaced=/Game/Megascans/3D_Assets/White_And_Blue_Book_vdkvbea/S_White_And_Blue_Book_vdkvbea_lod3_Var1.S_White_And_Blue_Book_vdkvbea_lod3_Var1;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Megascans/3D_Assets/Old_Damaged_Book_vf1fddhiw/S_Old_Damaged_Book_vf1fddhiw_lod3_Var1.S_Old_Damaged_Book_vf1fddhiw_lod3_Var1;
@@ -1923,7 +1890,6 @@ RecentlyPlaced=/Game/Megascans/Surfaces/Multi-colored_Lines_Fabric_scklezp0/MI_M
 RecentlyPlaced=/Game/Megascans/Surfaces/Multi-colored_Lines_Fabric_scklezp0/MI_Multi-colored_Lines_Fabric_scklezp0_4K_Inst.MI_Multi-colored_Lines_Fabric_scklezp0_4K_Inst;
 RecentlyPlaced=/Game/Megascans/Surfaces/Old_Fabric_Wall_Panel_ugclefmn/MI_Old_Fabric_Wall_Panel_ugclefmn_2K.MI_Old_Fabric_Wall_Panel_ugclefmn_2K;
 RecentlyPlaced=/Game/Megascans/Surfaces/Grey_Fabric_sbkjpwp0/MI_Grey_Fabric_sbkjpwp0_4K.MI_Grey_Fabric_sbkjpwp0_4K;
->>>>>>> Stashed changes
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
@@ -2026,6 +1992,9 @@ None=======
 /Game/Assets/Tashan/M4/Tashan/Assets/blockout/wardrobe.wardrobe=1
 /Game/Group_Assets/Aziz/Assets/Fireplace/MM_FireplaceTexture1.MM_FireplaceTexture1=1
 /Game/Group_Assets/Aziz/Assets/FlowerLamp/MI_FlowerLamp.MI_FlowerLamp=1
+/Game/Group_Assets/Aziz/Assets/Carpet/SM_Carpet.SM_Carpet=1
+/Game/Group_Assets/Aziz/Assets/Cloth/SM_ClothLargeCouch.SM_ClothLargeCouch=1
+/Game/Group_Assets/Aziz/Assets/Cloth/SM_ClothSmallCouch.SM_ClothSmallCouch=1
 
 [MaterialInstanceEditor]
 bShowGrid=True
@@ -2200,11 +2169,9 @@ WindowSize=X=1289.600 Y=729.600
 WindowSize=X=1286.400 Y=726.400
 WindowSize=X=1285.333 Y=725.333
 WindowSize=X=1315.333 Y=755.333
-<<<<<<< Updated upstream
 WindowSize=X=1324.000 Y=764.000
-=======
 WindowSize=X=1321.000 Y=761.000
->>>>>>> Stashed changes
+None=======
 None=======
 None=======
 None=======
