--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -331,7 +331,7 @@ ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Tashan/Wood
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets/Damaged_Picture_Frame_ukpidjpaw
 ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets
 ContentBrowserDrawer.SelectedPaths=/
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Piano
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
