PianoChairTHIS BETTER NOT FUCKING FAIL AGAIN

--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -158,9 +158,9 @@ RotGridEnabled=False
 SnapScaleEnabled=False
 
 [MRU]
-MRUItem0=/Game/stairwellblock3
-MRUItem1=/Game/abandonedroom_V2
-MRUItem2=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/stairwellblock3
+MRUItem2=/Game/abandonedroom_V2
 MRUItem3=/Game/Attic
 MRUItem4=/Game/stairwellblock2
 MRUItem5=/Game/Assets/Amy/firstfloor
@@ -411,7 +411,7 @@ LastLevel=/Game/Living_Room
 LastLevel=/Game/firstfloor
 LastLevel=/Game/Living_Room
 LastLevel=/Game/Living_Room
-LastLevel=/Game/stairwellblock3
+LastLevel=/Game/Living_Room
 None=======
 None=======
 None=======
@@ -425,7 +425,7 @@ WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 Object="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 None=======
 None=======
 GeneralProjectSettings="\"Object\" "
@@ -537,7 +537,7 @@ PrimitiveComponent="\"Object\" "
 MaterialEditorInstanceConstant="\"Object\" \"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
-MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
+MaterialInterface="\"Object\" "
 PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 MaterialExpressionTextureSample="\"Object\" "
@@ -1776,6 +1776,7 @@ CameraComponent.ComponentReplication=True
 CameraComponent.Activation=True
 CameraComponent.Cooking=True
 CameraComponent.Events=True
+Texture2D.Interchange =True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1878,7 +1879,6 @@ None=======
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror.M_Mirror
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1894,26 +1894,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror
-MRUItem1=/Game/Living_Room
-MRUItem2=/Game/Group_Assets/Tashan/chandielier/mat_chandelier_Inst
-MRUItem3=/Game/Group_Assets/Tashan/chandielier/uploads_files_3882406_chandelier
-MRUItem4=/Game/Group_Materials/Glass/Glass_Inst_03
-MRUItem5=/Game/Group_Assets/Charlotte/Assets/Lights/Circular_Lights_Light_02
-MRUItem6=/Game/Group_Materials/Metal/MM_Metal_Inst_02
-MRUItem7=/Game/Group_Assets/Charlotte/Assets/Lights/Circular_Lights_Damage
-MRUItem8=/Game/Group_Assets/Charlotte/Assets/Lights/Circular_Lights_Light_01
-MRUItem9=/Game/Group_Materials/Glass/Glass
-MRUItem10=/Game/Group_Materials/Metal/MM_Metal_Inst
-MRUItem11=/Game/Group_Assets/Charlotte/Assets/Lights/Light_Bulb_Bottom
-MRUItem12=/Game/Group_Assets/Charlotte/Assets/Lights/Light_Bulb_Inner
-MRUItem13=/Game/Group_Assets/Charlotte/Assets/Lights/Light_Bulb_Outer
-MRUItem14=/Game/Group_Materials/Glass/Glass_Inst_02
-MRUItem15=/Game/Group_Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Door_01
-MRUItem16=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_Frame_02_low
-MRUItem17=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_char
-MRUItem18=/Game/Group_Assets/Tashan/wallpaper/wallpapers_WP1_016
-MRUItem19=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_Inst2
+MRUItem0=/Game/Group_Assets/Aziz/Assets/Piano/Chair_low
+MRUItem1=/Game/Group_Assets/Aziz/Assets/Piano/MI_PianoChair
+MRUItem2=/Game/Group_Assets/Aziz/Assets/Piano/Chair_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem3=/Game/Living_Room
+MRUItem4=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror
+MRUItem5=/Game/Group_Assets/Tashan/chandielier/mat_chandelier_Inst
+MRUItem6=/Game/Group_Assets/Tashan/chandielier/uploads_files_3882406_chandelier
+MRUItem7=/Game/Group_Materials/Glass/Glass_Inst_03
+MRUItem8=/Game/Group_Assets/Charlotte/Assets/Lights/Circular_Lights_Light_02
+MRUItem9=/Game/Group_Materials/Metal/MM_Metal_Inst_02
+MRUItem10=/Game/Group_Assets/Charlotte/Assets/Lights/Circular_Lights_Damage
+MRUItem11=/Game/Group_Assets/Charlotte/Assets/Lights/Circular_Lights_Light_01
+MRUItem12=/Game/Group_Materials/Glass/Glass
+MRUItem13=/Game/Group_Materials/Metal/MM_Metal_Inst
+MRUItem14=/Game/Group_Assets/Charlotte/Assets/Lights/Light_Bulb_Bottom
+MRUItem15=/Game/Group_Assets/Charlotte/Assets/Lights/Light_Bulb_Inner
+MRUItem16=/Game/Group_Assets/Charlotte/Assets/Lights/Light_Bulb_Outer
+MRUItem17=/Game/Group_Materials/Glass/Glass_Inst_02
+MRUItem18=/Game/Group_Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Door_01
+MRUItem19=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_Frame_02_low
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -1959,6 +1959,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Piano/Chair_low.Chair_low;
 RecentlyPlaced=/Game/Neglect/M3/charassets/poop02_SM_Door_02_low.poop02_SM_Door_02_low;/Engine/Transient.EditorStaticMeshFactory_0
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Piano/GrandPianoBackboard_low.GrandPianoBackboard_low;
 RecentlyPlaced=/Game/Group_Assets/Tashan/chandielier/uploads_files_3882406_chandelier.uploads_files_3882406_chandelier;
@@ -1978,7 +1979,6 @@ RecentlyPlaced=/Game/Group_Assets/Tashan/hangers/hanger_Cube.hanger_Cube;
 RecentlyPlaced=/Game/Group_Assets/Tashan/hangers/hanger_Cylinder_016.hanger_Cylinder_016;
 RecentlyPlaced=/Game/Group_Assets/Tashan/ceilingfan/ceilingfan_Anim_Cube_003_Action.ceilingfan_Anim_Cube_003_Action;
 RecentlyPlaced=/Game/Group_Assets/Tashan/ceilingfan/ceilingfan.ceilingfan;
-RecentlyPlaced=/Game/Group_Assets/Charlotte/Assets/Doors+Windows/G_ModularAssets_Door_Window_01_SM_Door_Frame_01_low.G_ModularAssets_Door_Window_01_SM_Door_Frame_01_low;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
@@ -2107,9 +2107,12 @@ None=======
 /Game/Group_Materials/Metal/MM_Metal_Inst_02.MM_Metal_Inst_02=1
 /Game/Group_Assets/Tashan/chandielier/mat_chandelier_Inst.mat_chandelier_Inst=1
 /Game/Group_Assets/Tashan/chandielier/uploads_files_3882406_chandelier.uploads_files_3882406_chandelier=1
+/Game/Group_Assets/Aziz/Assets/Piano/Chair_low_DefaultMaterial_OcclusionRoughnessMetallic.Chair_low_DefaultMaterial_OcclusionRoughnessMetallic=1
+/Game/Group_Assets/Aziz/Assets/Piano/MI_PianoChair.MI_PianoChair=1
+/Game/Group_Assets/Aziz/Assets/Piano/Chair_low.Chair_low=1
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
 PrimType=1
 
