--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -158,17 +158,10 @@ RotGridEnabled=False
 SnapScaleEnabled=False
 
 [MRU]
-<<<<<<< HEAD
-MRUItem0=/Game/Attic
-MRUItem1=/Game/stairwellblock3
-MRUItem2=/Game/abandonedroom_V2
-MRUItem3=/Game/Living_Room
-=======
 MRUItem0=/Game/Living_Room
 MRUItem1=/Game/stairwellblock3
 MRUItem2=/Game/abandonedroom_V2
 MRUItem3=/Game/Attic
->>>>>>> c1a5d038161d8e88cde757fc2ac52f7da0f28a5e
 MRUItem4=/Game/stairwellblock2
 MRUItem5=/Game/Assets/Amy/firstfloor
 MRUItem6=/Game/abandonedroom_Migration
@@ -419,11 +412,9 @@ LastLevel=/Game/Living_Room
 LastLevel=/Game/firstfloor
 LastLevel=/Game/Living_Room
 LastLevel=/Game/Living_Room
-<<<<<<< HEAD
 LastLevel=/Game/Attic
-=======
 LastLevel=/Game/Living_Room
->>>>>>> c1a5d038161d8e88cde757fc2ac52f7da0f28a5e
+None=======
 None=======
 None=======
 None=======
@@ -1294,6 +1285,7 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Actor.Rendering=True
 Actor.Replication=True
 Actor.Collision=True
@@ -1788,7 +1780,6 @@ CameraComponent.ComponentReplication=True
 CameraComponent.Activation=True
 CameraComponent.Cooking=True
 CameraComponent.Events=True
-Texture2D.Interchange =True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1884,21 +1875,14 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
 None=======
 None=======
 None=======
-<<<<<<< HEAD
-OpenAssetsAtExit=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror.M_Mirror
-OpenAssetsAtExit=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw/MI_Weathered_Wooden_Planks_ulxqcedaw_2K_WithTrim.MI_Weathered_Wooden_Planks_ulxqcedaw_2K_WithTrim
-OpenAssetsAtExit=/Game/Group_Assets/Tashan/Wood/cabinet.cabinet
-OpenAssetsAtExit=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst_Inst.MAT_TRIMS_Inst1_Inst_Inst
-OpenAssetsAtExit=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst.MAT_TRIMS_Inst1_Inst
-=======
->>>>>>> c1a5d038161d8e88cde757fc2ac52f7da0f28a5e
+None=======
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1914,32 +1898,10 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-<<<<<<< HEAD
-MRUItem0=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst
-MRUItem1=/Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst_Inst
-MRUItem2=/Game/Group_Assets/Tashan/Wood/cabinet
-MRUItem3=/Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw/MI_Weathered_Wooden_Planks_ulxqcedaw_2K_WithTrim
-MRUItem4=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror
-MRUItem5=/Game/Living_Room
-MRUItem6=/Game/Group_Assets/Tashan/chandielier/mat_chandelier_Inst
-MRUItem7=/Game/Group_Assets/Tashan/chandielier/uploads_files_3882406_chandelier
-MRUItem8=/Game/Group_Materials/Glass/Glass_Inst_03
-MRUItem9=/Game/Group_Assets/Charlotte/Assets/Lights/Circular_Lights_Light_02
-MRUItem10=/Game/Group_Materials/Metal/MM_Metal_Inst_02
-MRUItem11=/Game/Group_Assets/Charlotte/Assets/Lights/Circular_Lights_Damage
-MRUItem12=/Game/Group_Assets/Charlotte/Assets/Lights/Circular_Lights_Light_01
-MRUItem13=/Game/Group_Materials/Glass/Glass
-MRUItem14=/Game/Group_Materials/Metal/MM_Metal_Inst
-MRUItem15=/Game/Group_Assets/Charlotte/Assets/Lights/Light_Bulb_Bottom
-MRUItem16=/Game/Group_Assets/Charlotte/Assets/Lights/Light_Bulb_Inner
-MRUItem17=/Game/Group_Assets/Charlotte/Assets/Lights/Light_Bulb_Outer
-MRUItem18=/Game/Group_Materials/Glass/Glass_Inst_02
-MRUItem19=/Game/Group_Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Door_01
-=======
-MRUItem0=/Game/Group_Assets/Aziz/Assets/Piano/Chair_low
-MRUItem1=/Game/Group_Assets/Aziz/Assets/Piano/MI_PianoChair
-MRUItem2=/Game/Group_Assets/Aziz/Assets/Piano/Chair_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem3=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Group_Assets/Aziz/Assets/Piano/Chair_low
+MRUItem2=/Game/Group_Assets/Aziz/Assets/Piano/MI_PianoChair
+MRUItem3=/Game/Group_Assets/Aziz/Assets/Piano/Chair_low_DefaultMaterial_OcclusionRoughnessMetallic
 MRUItem4=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror
 MRUItem5=/Game/Group_Assets/Tashan/chandielier/mat_chandelier_Inst
 MRUItem6=/Game/Group_Assets/Tashan/chandielier/uploads_files_3882406_chandelier
@@ -1956,7 +1918,6 @@ MRUItem16=/Game/Group_Assets/Charlotte/Assets/Lights/Light_Bulb_Outer
 MRUItem17=/Game/Group_Materials/Glass/Glass_Inst_02
 MRUItem18=/Game/Group_Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Door_01
 MRUItem19=/Game/Group_Assets/Charlotte/Assets/Door/G_ModularAssets_Door_Window_01_SM_Door_Frame_02_low
->>>>>>> c1a5d038161d8e88cde757fc2ac52f7da0f28a5e
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -2002,11 +1963,9 @@ None=======
 None=======
 None=======
 None=======
-<<<<<<< HEAD
+None=======
 RecentlyPlaced=/Game/Group_Assets/Tashan/Wood/cabinet.cabinet;
-=======
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Piano/Chair_low.Chair_low;
->>>>>>> c1a5d038161d8e88cde757fc2ac52f7da0f28a5e
 RecentlyPlaced=/Game/Neglect/M3/charassets/poop02_SM_Door_02_low.poop02_SM_Door_02_low;/Engine/Transient.EditorStaticMeshFactory_0
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Piano/GrandPianoBackboard_low.GrandPianoBackboard_low;
 RecentlyPlaced=/Game/Group_Assets/Tashan/chandielier/uploads_files_3882406_chandelier.uploads_files_3882406_chandelier;
@@ -2069,6 +2028,7 @@ RecentlyPlaced=/Game/Group_Assets/Tashan/ceilingfan/ceilingfan.ceilingfan;
 /Game/Group_Assets/Aziz/Assets/Cabinet/Cabinet_low_DefaultMaterial_OcclusionRoughnessMetallic.Cabinet_low_DefaultMaterial_OcclusionRoughnessMetallic=1
 /Game/Group_Assets/Aziz/Assets/Cabinet/MI_Cabinet.MI_Cabinet=1
 /Game/Group_Assets/Aziz/Assets/Cabinet/Cabinet_low.Cabinet_low=1
+None=======
 None=======
 None=======
 None=======
@@ -2154,16 +2114,13 @@ None=======
 /Game/Group_Materials/Metal/MM_Metal_Inst_02.MM_Metal_Inst_02=1
 /Game/Group_Assets/Tashan/chandielier/mat_chandelier_Inst.mat_chandelier_Inst=1
 /Game/Group_Assets/Tashan/chandielier/uploads_files_3882406_chandelier.uploads_files_3882406_chandelier=1
-<<<<<<< HEAD
 /Game/Megascans/Surfaces/Weathered_Wooden_Planks_ulxqcedaw/MI_Weathered_Wooden_Planks_ulxqcedaw_2K_WithTrim.MI_Weathered_Wooden_Planks_ulxqcedaw_2K_WithTrim=1
 /Game/Group_Assets/Tashan/Wood/cabinet.cabinet=1
 /Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst_Inst.MAT_TRIMS_Inst1_Inst_Inst=1
 /Game/Neglect/M3/charassets/MAT_TRIMS_Inst1_Inst.MAT_TRIMS_Inst1_Inst=1
-=======
 /Game/Group_Assets/Aziz/Assets/Piano/Chair_low_DefaultMaterial_OcclusionRoughnessMetallic.Chair_low_DefaultMaterial_OcclusionRoughnessMetallic=1
 /Game/Group_Assets/Aziz/Assets/Piano/MI_PianoChair.MI_PianoChair=1
 /Game/Group_Assets/Aziz/Assets/Piano/Chair_low.Chair_low=1
->>>>>>> c1a5d038161d8e88cde757fc2ac52f7da0f28a5e
 
 [MaterialInstanceEditor]
 bShowGrid=True
