--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -2406,11 +2406,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=D:/GroupMorriganHall/MorriganHall/MorriganHall 5.2/Content
+UNR=../../../../../../Game Projects/Morrigan Hall Github/MorriganHall/MorriganHall 5.2/Content
 BRUSH=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 FBX=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 FBXAnim=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
-GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/GrandPiano/GrandPianoBackboard_low.fbx
+GenericImport=../../../../../../Game Projects/Morrigan Hall/Assets/GrandPiano/Metronome/Metronome_low.fbx
 GenericExport=../../../../../../Users/igfxd/OneDrive/Documents/FMP Submission/Assets/door/DoorReUV.FBX
 GenericOpen=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
 GenericSave=../../../../../../Users/igfxd/OneDrive/Documents/Unreal Projects/Morrigan/MorriganHall/MorriganHall 5.2/Content/
@@ -3476,9 +3476,9 @@ SequencerWidgets.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=E:/Program Files/Unreal Engine/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=E:/Program Files/Unreal Engine/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
